--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <header>
-    <href rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </header>
 <body>
     <div .header>
