--- a/index.html
+++ b/index.html
@@ -8,4 +8,8 @@
         <h2>Side Panel</h2>
         <p>This is a side panel with some content.</p>
     </div>
+    <div .main-content>
+        <h2>Main Content</h2>
+        <p>This is the main content area of the page.</p>
+    </div>
 </body>
