messing with padding for header

--- a/index.html
+++ b/index.html
@@ -2,14 +2,10 @@
     <link rel="stylesheet" href="style.css">
 </header>
 <body>
-    <div .header>
+    <section class="header">
         <h1>My Web Page</h1>
-    <div .side-panel>
-        <h2>Side Panel</h2>
-        <p>This is a side panel with some content.</p>
-    </div>
-    <div .main-content>
-        <h2>Main Content</h2>
-        <p>This is the main content area of the page.</p>
-    </div>
+    </section>
+    <section class="content">
+        >
+    </section>
 </body>
