Navigation menu looks nearlty done

--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
     <link rel="stylesheet" href="style.css">
 </header>
 <body>
-    <section class="header">
-        <h1>My Web Page</h1>
-    </section>
-    <section class="content">
-        >
-    </section>
+    <div class="header_menu">
+        <div class="menu_1">Home</div>
+        <div class="menu_2">Portfolio</div>
+        <div class="menu_3">Cool Links</div>
+    </div>
 </body>
