Got site to acceptable standard, still needs work

--- a/index.html
+++ b/index.html
@@ -3,8 +3,20 @@
 </header>
 <body>
     <div class="header_menu">
-        <div class="menu_1">Home</div>
-        <div class="menu_2">Portfolio</div>
-        <div class="menu_3">Cool Links</div>
+        <a href="index.html" class="menu_1">About</a>
+        <a href="portfolio.html" class="menu_2">Portfolio</a>
+        <a href="cool_links.html" class="menu_3">Cool Links</a>
+    </div>
+    <div class="content">
+        <h1 class="content_title">About</h1>
+        <div class="content_text">
+            <img src="src/pfp.jpg" alt="Casper Wright" class="profile_image">
+            <h2 id="about-me-">About me:</h2>
+            <p>I like computers, since childhood I have had a fascination with them which has led me down this rabbit-hole of Cyber Security. Currently working on my dissertation project for my BSc Cyber Security and Digital Forensics at UWE to improve on my A level Computer Science project Secure File Sender. As well as working on labs on HTB Academy and Immersive to develop the skills to become a SOC analyst.</p>
+            <h2 id="links-">Links:</h2>
+            <p><a href="https://www.linkedin.com/in/casper-wright/">Linkedin</a>
+            <a href="https://www.hackthissite.org/user/view/sacnit/">HackThisSite</a>
+            <a href="https://github.com/sacnit">GitHub</a></p>
+        </div>
     </div>
 </body>
