Added a couple links i forgot

--- a/cool_links.html
+++ b/cool_links.html
@@ -22,11 +22,12 @@
             <a href="https://bellingcat.gitbook.io/toolkit">bcattools</a>
             <a href="https://www.dcode.fr/">dCode</a>
             <a href="https://github.com/digitalisx/awesome-memory-forensics">digitalisx/awesome-memory-forensics</a>
-            <a href="https://www.garykessler.net/library/file_sigs.html">File Signatures</a></p>
+            <a href="https://www.garykessler.net/library/file_sigs.html">File Signatures</a>
+            <a href="https://github.com/Psmths/windows-forensic-artifacts">Psmths/windows-forensic-artifacts</a></p>
             <h3 id="dnd">DnD</h3>
             <p><a href="https://5e.tools/">5etools</a>
-            <a href="https://www.aidedd.org/dnd-filters/monsters.php">Monsters - DnD 5e</a></p>
-            
+            <a href="https://www.aidedd.org/dnd-filters/monsters.php">Monsters - DnD 5e</a>
+            <a href="https://new.tableplop.com/">Tableplop</a></p>            
         </div>
     </div>
 </body>
