--- a/cool_links.html
+++ b/cool_links.html
@@ -12,7 +12,7 @@
         <div class="content_text">
             <p>This is a collection of links that I think are cool. I used to collect them in my bookmarks bar but I feel that some of these need to be shared, although most are common knowledge. A bit like showing you my knickknacks collection (currently private).</p>
             <h2 id="collections">Collections</h2>
-            <p>For ease of browsing I&#39;ve separated them by general category.</p>
+            <p>For ease of browsing I&#39;ve separated them by general category. Enjoy.</p>
             <h3 id="cyber-challenges">Cyber challenges</h3>
             <p><a href="https://www.hackthissite.org/">Hack This Site</a>
             <a href="https://www.root-me.org/?page=news&amp;lang=en">Root Me</a></p>
