Added some more cool links

--- a/cool_links.html
+++ b/cool_links.html
@@ -14,20 +14,33 @@
             <h2 id="collections">Collections</h2>
             <p>For ease of browsing I&#39;ve separated them by general category. Enjoy.</p>
             <h3 id="cyber-challenges">Cyber challenges</h3>
-            <p><a href="https://www.hackthissite.org/">Hack This Site</a>
-            <a href="https://www.root-me.org/?page=news&amp;lang=en">Root Me</a></p>
+            <p>
+                <a href="https://www.hackthissite.org/">Hack This Site</a>
+                <a href="https://www.root-me.org/?page=news&amp;lang=en">Root Me</a>
+            </p>
             <h3 id="tools">Tools</h3>
-            <p><a href="https://fotoforensics.com/">FotoForensics</a>
-            <a href="https://gchq.github.io/CyberChef/">CyberChef</a>
-            <a href="https://bellingcat.gitbook.io/toolkit">bcattools</a>
-            <a href="https://www.dcode.fr/">dCode</a>
-            <a href="https://github.com/digitalisx/awesome-memory-forensics">digitalisx/awesome-memory-forensics</a>
-            <a href="https://www.garykessler.net/library/file_sigs.html">File Signatures</a>
-            <a href="https://github.com/Psmths/windows-forensic-artifacts">Psmths/windows-forensic-artifacts</a></p>
+            <p>
+                <a href="https://fotoforensics.com/">FotoForensics</a>
+                <a href="https://gchq.github.io/CyberChef/">CyberChef</a>
+                <a href="https://bellingcat.gitbook.io/toolkit">bcattools</a>
+                <a href="https://www.dcode.fr/">dCode</a>
+                <a href="https://github.com/digitalisx/awesome-memory-forensics">digitalisx/awesome-memory-forensics</a>
+                <a href="https://www.garykessler.net/library/file_sigs.html">File Signatures</a>
+                <a href="https://github.com/gdesmar/innoextract">gdesmar/innoextract</a>
+                <a href="https://www.sweetscape.com/010editor/">010 editor</a>
+                <a href="https://github.com/Psmths/windows-forensic-artifacts">Psmths/windows-forensic-artifacts</a>
+            </p>
             <h3 id="dnd">DnD</h3>
-            <p><a href="https://5e.tools/">5etools</a>
-            <a href="https://www.aidedd.org/dnd-filters/monsters.php">Monsters - DnD 5e</a>
-            <a href="https://new.tableplop.com/">Tableplop</a></p>            
+            <p>
+                <a href="https://5e.tools/">5etools</a>
+                <a href="https://www.aidedd.org/dnd-filters/monsters.php">Monsters - DnD 5e</a>
+                <a href="https://new.tableplop.com/">Tableplop</a></p>      
+            <h3 id="misc">Misc</h3>
+            <p>
+                <a href="https://gitlab.com/phoneybadger/pokemon-colorscripts">phoneybadger/pokemon-colorscripts</a>
+                <a href="https://github.com/fire1ce/DDNS-Cloudflare-Bash">fire1ce/DDNS-Cloudflare-Bash</a>
+                <a href="https://www.semanticscholar.org/">semanticscholar</a>
+            </p>      
         </div>
     </div>
 </body>
