Changed format of links, adding tooltips

--- a/cool_links.html
+++ b/cool_links.html
@@ -14,33 +14,37 @@
             <h2 id="collections">Collections</h2>
             <p>For ease of browsing I&#39;ve separated them by general category. Enjoy.</p>
             <h3 id="cyber-challenges">Cyber challenges</h3>
-            <p>
-                <a href="https://www.hackthissite.org/">Hack This Site</a>
-                <a href="https://www.root-me.org/?page=news&amp;lang=en">Root Me</a>
-            </p>
+            <ul>
+                <li><a href="https://www.hackthissite.org/">Hack This Site</a> - Fun challenges, has great looking themes.</li>
+                <li><a href="https://www.root-me.org/?page=news&amp;lang=en">Root Me</a> - Great variety of discipline and difficulty in challenges.</li>
+            </ul>
+
             <h3 id="tools">Tools</h3>
-            <p>
-                <a href="https://fotoforensics.com/">FotoForensics</a>
-                <a href="https://gchq.github.io/CyberChef/">CyberChef</a>
-                <a href="https://bellingcat.gitbook.io/toolkit">bcattools</a>
-                <a href="https://www.dcode.fr/">dCode</a>
-                <a href="https://github.com/digitalisx/awesome-memory-forensics">digitalisx/awesome-memory-forensics</a>
-                <a href="https://www.garykessler.net/library/file_sigs.html">File Signatures</a>
-                <a href="https://github.com/gdesmar/innoextract">gdesmar/innoextract</a>
-                <a href="https://www.sweetscape.com/010editor/">010 editor</a>
-                <a href="https://github.com/Psmths/windows-forensic-artifacts">Psmths/windows-forensic-artifacts</a>
-            </p>
+            <ul>
+                <li><a href="https://fotoforensics.com/">FotoForensics</a> - Provides great analysis of images, including many common steps like hidden pixels and strings.</li>
+                <li><a href="https://gchq.github.io/CyberChef/">CyberChef</a> - It's Cyberchef... Its brilliant.</li>
+                <li><a href="https://bellingcat.gitbook.io/toolkit">bcattools</a> - A collection of OSINT tools, with useful information on each one.</li>
+                <li><a href="https://www.dcode.fr/">dCode</a> - A bunch of tools for encoding, hashing, and encrypting data.</li>
+                <li><a href="https://github.com/digitalisx/awesome-memory-forensics">digitalisx/awesome-memory-forensics</a> - Many useful IR and Forensics tools.</li>
+                <li><a href="https://www.garykessler.net/library/file_sigs.html">File Signatures</a> - Many file signatures in hex and text with tooltips.</li>
+                <li><a href="https://github.com/gdesmar/innoextract">gdesmar/innoextract</a> - A tool to extract files from Inno Setup installers, this one with specific functionality for password protected packages.</li>
+                <li><a href="https://www.sweetscape.com/010editor/">010 editor</a> - A great hex and other file editor that can break files down by header section.</li>
+                <li><a href="https://github.com/Psmths/windows-forensic-artifacts">Psmths/windows-forensic-artifacts</a> - Every windows forensic artefacts, which versions its on, where to find it, and what it means.</li>
+            </ul>
+
             <h3 id="dnd">DnD</h3>
-            <p>
-                <a href="https://5e.tools/">5etools</a>
-                <a href="https://www.aidedd.org/dnd-filters/monsters.php">Monsters - DnD 5e</a>
-                <a href="https://new.tableplop.com/">Tableplop</a></p>      
+            <ul>
+                <li><a href="https://5e.tools/">5etools</a> - A bunch of DND resources for 5e, like monsters, items, classes, features, and anything else mentioned in books.</li>
+                <li><a href="https://www.aidedd.org/dnd-filters/monsters.php">Monsters - DnD 5e</a> - A searchable database of DND 5e monsters.</li>
+                <li><a href="https://new.tableplop.com/">Tableplop</a> - A VTT for playing DND thats free and works well.</li>
+            </ul>
+
             <h3 id="misc">Misc</h3>
-            <p>
-                <a href="https://gitlab.com/phoneybadger/pokemon-colorscripts">phoneybadger/pokemon-colorscripts</a>
-                <a href="https://github.com/fire1ce/DDNS-Cloudflare-Bash">fire1ce/DDNS-Cloudflare-Bash</a>
-                <a href="https://www.semanticscholar.org/">semanticscholar</a>
-            </p>      
+            <ul>
+                <li><a href="https://gitlab.com/phoneybadger/pokemon-colorscripts">phoneybadger/pokemon-colorscripts</a> - It makes pokemon in your terminal.</li>
+                <li><a href="https://github.com/fire1ce/DDNS-Cloudflare-Bash">fire1ce/DDNS-Cloudflare-Bash</a> - A script for managing Cloudflare DDNS updates.</li>
+                <li><a href="https://www.semanticscholar.org/">semanticscholar</a> - Makes searching for research papers easier.</li>
+            </ul>
         </div>
     </div>
 </body>
